third_party/move/move-compiler-v2/tests/checking-lang-v2.4/friend_const_non_friend_rejected.exp

Diagnostics:
error: unbound module `0x42::N` in friend declaration
  ┌─ tests/checking-lang-v2.4/friend_const_non_friend_rejected.move:4:5
  │
4 │     friend 0x42::N;
  │     ^^^^^^^^^^^^^^^

error: constant `0x42::M::FRIEND_CONST` cannot be used here due to visibility constraints
   ┌─ tests/checking-lang-v2.4/friend_const_non_friend_rejected.move:13:9
   │
13 │         M::FRIEND_CONST
   │         ^^^^^^^^^^^^^^^
